Created init on ArrayLists where possible
Signed-off-by: dumbdemon <20498145+dumbdemon@users.noreply.github.com>